# textminer

./: .gitignore  README.md  pyproject.toml
tests/integration/: test_conllu2doc.py  test_textprocessor.py
tests/integration/fixtures/: test_abstract.txt  test_conllu_file.conllu
textminer/: conllu2doc.py  preprocess_docs.py  preprocess_docsver2.py  textprocessor.py
