[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "textminer"
authors = [
	{name = "Max Strandén", email = "max.stranden@gmail.com"},
]
description = "Utilities for text mining"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
	"conllu"
]

[project.optional-dependencies]
textprocessor = [
	"pytest",
	"trankit",
	"six",
	"PyPDF2", 
	"pycryptodome"
]
textanalyser = [
	"pytest",
	"huggingface_hub", 
	"transformers",
	"sentence_transformers",
	"scikit-learn", 
	"numpy", 
	"pandas", 
	"umap-learn"
]

topicmodeling = [
    "bertopic",
	"datamapplot",
	"huggingface_hub",
	"transformers"
]

[project.scripts]
conllu2doc = "textminer.conllu2doc:cli"
files2sentences = "textminer.textprocessor:main"
preprocess_docs = "textminer.preprocess_docs:main"
preprocess_docsver2 = "textminer.preprocess_docsver2:main"

[project.urls]
Homepage = "https://github.com/StranMax/textminer"
Documentation = "https://github.com/StranMax/textminer"

[tool.setuptools.packages.find]
exclude = ["cache*"]